--- a/src/app/setting/setting.component.css
+++ b/src/app/setting/setting.component.css
@@ -1,9 +1,6 @@
-.setting-panel {
-  /* text-align: center; */
-}
 .setting-contet {
 }
 .cat-div {
-  padding: 10px;
   margin-top: 10px !important;
+  margin: 20px;
 }
